src/Compiler/AbstractSyntaxTree/Parser/MagParser.java
// Generated from /Users/Alri/IdeaProjects/Compiler2016/src/Compiler/AST/Parser/Mag.g4 by ANTLR 4.5.1
package Compiler.AbstractSyntaxTree.Parser;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MagParser extends Parser {
    public static final int
            Break = 1, Continue = 2, Else = 3, For = 4, If = 5, Int = 6, Void = 7, While = 8, Bool = 9,
            String = 10, Null = 11, True = 12, False = 13, Return = 14, New = 15, Class = 16, LeftParen = 17,
            RightParen = 18, LeftBracket = 19, RightBracket = 20, LeftBrace = 21, RightBrace = 22,
            Less = 23, LessEqual = 24, Greater = 25, GreaterEqual = 26, LeftShift = 27, RightShift = 28,
            Plus = 29, PlusPlus = 30, Minus = 31, MinusMinus = 32, Star = 33, Div = 34, Mod = 35,
            And = 36, Or = 37, AndAnd = 38, OrOr = 39, Caret = 40, Not = 41, Tilde = 42, Question = 43,
            Colon = 44, Semi = 45, Comma = 46, Assign = 47, Equal = 48, NotEqual = 49, Dot = 50,
            ID = 51, IntLiteral = 52, StringLiteral = 53, Whitespace = 54, Newline = 55, LineComment = 56;
    public static final int
            RULE_program = 0, RULE_classDeclaration = 1, RULE_classMemberDeclarationList = 2,
            RULE_typeArray = 3, RULE_type = 4, RULE_statement = 5, RULE_blockStatement = 6,
            RULE_statementList = 7, RULE_expressionStatement = 8, RULE_expression = 9,
            RULE_assignmentExpression = 10, RULE_logicalOrExpression = 11, RULE_logicalAndExpression = 12,
            RULE_bitwiseOrExpression = 13, RULE_bitwiseXorExpression = 14, RULE_bitwiseAndExpression = 15,
            RULE_equalityExpression = 16, RULE_relationalExpression = 17, RULE_shiftExpression = 18,
            RULE_addSubExpression = 19, RULE_mulDivRemExpression = 20, RULE_creationExpression = 21,
            RULE_dimensionExpression = 22, RULE_prefixExpression = 23, RULE_postfixExpression = 24,
            RULE_primaryExpression = 25, RULE_constant = 26, RULE_logicConstant = 27,
            RULE_argumentExpressionList = 28, RULE_selectionStatement = 29, RULE_iterationStatement = 30,
            RULE_whileStatement = 31, RULE_forStatement = 32, RULE_jumpStatement = 33,
            RULE_returnStatement = 34, RULE_breakStatement = 35, RULE_continueStatement = 36,
            RULE_variableDeclarationStatement = 37, RULE_variableDeclaration = 38,
            RULE_functionDeclaration = 39, RULE_parameterList = 40;
    public static final String[] ruleNames = {
            "program", "classDeclaration", "classMemberDeclarationList", "typeArray",
            "type", "statement", "blockStatement", "statementList", "expressionStatement",
            "expression", "assignmentExpression", "logicalOrExpression", "logicalAndExpression",
            "bitwiseOrExpression", "bitwiseXorExpression", "bitwiseAndExpression",
            "equalityExpression", "relationalExpression", "shiftExpression", "addSubExpression",
            "mulDivRemExpression", "creationExpression", "dimensionExpression", "prefixExpression",
            "postfixExpression", "primaryExpression", "constant", "logicConstant",
            "argumentExpressionList", "selectionStatement", "iterationStatement",
            "whileStatement", "forStatement", "jumpStatement", "returnStatement",
            "breakStatement", "continueStatement", "variableDeclarationStatement",
            "variableDeclaration", "functionDeclaration", "parameterList"
    };
    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    public static final ATN _ATN =
            new ATNDeserializer().deserialize(_serializedATN.toCharArray());
    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    private static final String[] _LITERAL_NAMES = {
            null, "'break'", "'continue'", "'else'", "'for'", "'if'", "'int'", "'void'",
            "'while'", "'bool'", "'string'", "'null'", "'true'", "'false'", "'return'",
            "'new'", "'class'", "'('", "')'", "'['", "']'", "'{'", "'}'", "'<'", "'<='",
            "'>'", "'>='", "'<<'", "'>>'", "'+'", "'++'", "'-'", "'--'", "'*'", "'/'",
            "'%'", "'&'", "'|'", "'&&'", "'||'", "'^'", "'!'", "'~'", "'?'", "':'",
            "';'", "','", "'='", "'=='", "'!='", "'.'"
    };
    private static final String[] _SYMBOLIC_NAMES = {
            null, "Break", "Continue", "Else", "For", "If", "Int", "Void", "While",
            "Bool", "String", "Null", "True", "False", "Return", "New", "Class", "LeftParen",
            "RightParen", "LeftBracket", "RightBracket", "LeftBrace", "RightBrace",
            "Less", "LessEqual", "Greater", "GreaterEqual", "LeftShift", "RightShift",
            "Plus", "PlusPlus", "Minus", "MinusMinus", "Star", "Div", "Mod", "And",
            "Or", "AndAnd", "OrOr", "Caret", "Not", "Tilde", "Question", "Colon",
            "Semi", "Comma", "Assign", "Equal", "NotEqual", "Dot", "ID", "IntLiteral",
            "StringLiteral", "Whitespace", "Newline", "LineComment"
    };
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    static {
        RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION);
    }

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    static {
        _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
        for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
            _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
        }
    }

    public MagParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "Mag.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public final ProgramContext program() throws RecognitionException {
        ProgramContext _localctx = new ProgramContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_program);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(87);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        setState(87);
                        switch (getInterpreter().adaptivePredict(_input, 0, _ctx)) {
                            case 1: {
                                setState(82);
                                classDeclaration();
                            }
                            break;
                            case 2: {
                                setState(83);
                                functionDeclaration();
                            }
                            break;
                            case 3: {
                                setState(84);
                                variableDeclaration();
                                setState(85);
                                match(Semi);
                            }
                            break;
                        }
                    }
                    setState(89);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Int) | (1L << Void) | (1L << Bool) | (1L << String) | (1L << Class) | (1L << ID))) != 0));
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ClassDeclarationContext classDeclaration() throws RecognitionException {
        ClassDeclarationContext _localctx = new ClassDeclarationContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_classDeclaration);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(91);
                match(Class);
                setState(92);
                match(ID);
                setState(93);
                match(LeftBrace);
                setState(95);
                _la = _input.LA(1);
                if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Int) | (1L << Bool) | (1L << String) | (1L << ID))) != 0)) {
                    {
                        setState(94);
                        classMemberDeclarationList();
                    }
                }

                setState(97);
                match(RightBrace);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ClassMemberDeclarationListContext classMemberDeclarationList() throws RecognitionException {
        ClassMemberDeclarationListContext _localctx = new ClassMemberDeclarationListContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_classMemberDeclarationList);
        try {
            setState(108);
            switch (getInterpreter().adaptivePredict(_input, 3, _ctx)) {
                case 1:
                    _localctx = new ClassMemDeclList_Context(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(99);
                    typeArray(0);
                    setState(100);
                    match(ID);
                    setState(101);
                    match(Semi);
                }
                break;
                case 2:
                    _localctx = new ClassMemDeclList_listContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(103);
                    typeArray(0);
                    setState(104);
                    match(ID);
                    setState(105);
                    match(Semi);
                    setState(106);
                    classMemberDeclarationList();
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final TypeArrayContext typeArray() throws RecognitionException {
        return typeArray(0);
    }

    private TypeArrayContext typeArray(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        TypeArrayContext _localctx = new TypeArrayContext(_ctx, _parentState);
        TypeArrayContext _prevctx = _localctx;
        int _startState = 6;
        enterRecursionRule(_localctx, 6, RULE_typeArray, _p);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                {
                    _localctx = new TypeArray_typeContext(_localctx);
                    _ctx = _localctx;
                    _prevctx = _localctx;

                    setState(111);
                    type();
                }
                _ctx.stop = _input.LT(-1);
                setState(118);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 4, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        if (_parseListeners != null) triggerExitRuleEvent();
                        _prevctx = _localctx;
                        {
                            {
                                _localctx = new TypeArray_dimContext(new TypeArrayContext(_parentctx, _parentState));
                                pushNewRecursionContext(_localctx, _startState, RULE_typeArray);
                                setState(113);
                                if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
                                setState(114);
                                match(LeftBracket);
                                setState(115);
                                match(RightBracket);
                            }
                        }
                    }
                    setState(120);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 4, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }

    public final TypeContext type() throws RecognitionException {
        TypeContext _localctx = new TypeContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_type);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(121);
                _la = _input.LA(1);
                if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Int) | (1L << Bool) | (1L << String) | (1L << ID))) != 0))) {
                    _errHandler.recoverInline(this);
                } else {
                    consume();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final StatementContext statement() throws RecognitionException {
        StatementContext _localctx = new StatementContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_statement);
        try {
            setState(129);
            switch (getInterpreter().adaptivePredict(_input, 5, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(123);
                    blockStatement();
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(124);
                    expressionStatement();
                }
                break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(125);
                    selectionStatement();
                }
                break;
                case 4:
                    enterOuterAlt(_localctx, 4);
                {
                    setState(126);
                    iterationStatement();
                }
                break;
                case 5:
                    enterOuterAlt(_localctx, 5);
                {
                    setState(127);
                    jumpStatement();
                }
                break;
                case 6:
                    enterOuterAlt(_localctx, 6);
                {
                    setState(128);
                    variableDeclarationStatement();
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final BlockStatementContext blockStatement() throws RecognitionException {
        BlockStatementContext _localctx = new BlockStatementContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_blockStatement);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(131);
                match(LeftBrace);
                setState(133);
                _la = _input.LA(1);
                if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Break) | (1L << Continue) | (1L << For) | (1L << If) | (1L << Int) | (1L << While) | (1L << Bool) | (1L << String) | (1L << Null) | (1L << True) | (1L << False) | (1L << Return) | (1L << New) | (1L << LeftParen) | (1L << LeftBrace) | (1L << Plus) | (1L << PlusPlus) | (1L << Minus) | (1L << MinusMinus) | (1L << Not) | (1L << Tilde) | (1L << Semi) | (1L << ID) | (1L << IntLiteral) | (1L << StringLiteral))) != 0)) {
                    {
                        setState(132);
                        statementList();
                    }
                }

                setState(135);
                match(RightBrace);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final StatementListContext statementList() throws RecognitionException {
        StatementListContext _localctx = new StatementListContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_statementList);
        try {
            setState(141);
            switch (getInterpreter().adaptivePredict(_input, 7, _ctx)) {
                case 1:
                    _localctx = new StatementList_stmtContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(137);
                    statement();
                }
                break;
                case 2:
                    _localctx = new StatementList_listContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(138);
                    statement();
                    setState(139);
                    statementList();
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ExpressionStatementContext expressionStatement() throws RecognitionException {
        ExpressionStatementContext _localctx = new ExpressionStatementContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_expressionStatement);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(144);
                _la = _input.LA(1);
                if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Null) | (1L << True) | (1L << False) | (1L << New) | (1L << LeftParen) | (1L << Plus) | (1L << PlusPlus) | (1L << Minus) | (1L << MinusMinus) | (1L << Not) | (1L << Tilde) | (1L << ID) | (1L << IntLiteral) | (1L << StringLiteral))) != 0)) {
                    {
                        setState(143);
                        expression();
                    }
                }

                setState(146);
                match(Semi);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ExpressionContext expression() throws RecognitionException {
        ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_expression);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(148);
                assignmentExpression();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final AssignmentExpressionContext assignmentExpression() throws RecognitionException {
        AssignmentExpressionContext _localctx = new AssignmentExpressionContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_assignmentExpression);
        try {
            setState(155);
            switch (getInterpreter().adaptivePredict(_input, 9, _ctx)) {
                case 1:
                    _localctx = new Assignment_logicalOrContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(150);
                    logicalOrExpression(0);
                }
                break;
                case 2:
                    _localctx = new Assignment_assignContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(151);
                    prefixExpression();
                    setState(152);
                    match(Assign);
                    setState(153);
                    assignmentExpression();
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final LogicalOrExpressionContext logicalOrExpression() throws RecognitionException {
        return logicalOrExpression(0);
    }

    private LogicalOrExpressionContext logicalOrExpression(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        LogicalOrExpressionContext _localctx = new LogicalOrExpressionContext(_ctx, _parentState);
        LogicalOrExpressionContext _prevctx = _localctx;
        int _startState = 22;
        enterRecursionRule(_localctx, 22, RULE_logicalOrExpression, _p);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                {
                    _localctx = new LogicalOr_logicalAndContext(_localctx);
                    _ctx = _localctx;
                    _prevctx = _localctx;

                    setState(158);
                    logicalAndExpression(0);
                }
                _ctx.stop = _input.LT(-1);
                setState(165);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 10, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        if (_parseListeners != null) triggerExitRuleEvent();
                        _prevctx = _localctx;
                        {
                            {
                                _localctx = new LogicalOr_orContext(new LogicalOrExpressionContext(_parentctx, _parentState));
                                pushNewRecursionContext(_localctx, _startState, RULE_logicalOrExpression);
                                setState(160);
                                if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
                                setState(161);
                                match(OrOr);
                                setState(162);
                                logicalAndExpression(0);
                            }
                        }
                    }
                    setState(167);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 10, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }

    public final LogicalAndExpressionContext logicalAndExpression() throws RecognitionException {
        return logicalAndExpression(0);
    }

    private LogicalAndExpressionContext logicalAndExpression(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        LogicalAndExpressionContext _localctx = new LogicalAndExpressionContext(_ctx, _parentState);
        LogicalAndExpressionContext _prevctx = _localctx;
        int _startState = 24;
        enterRecursionRule(_localctx, 24, RULE_logicalAndExpression, _p);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                {
                    _localctx = new LogicalAnd_bitwiseOrContext(_localctx);
                    _ctx = _localctx;
                    _prevctx = _localctx;

                    setState(169);
                    bitwiseOrExpression(0);
                }
                _ctx.stop = _input.LT(-1);
                setState(176);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 11, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        if (_parseListeners != null) triggerExitRuleEvent();
                        _prevctx = _localctx;
                        {
                            {
                                _localctx = new LogicalAnd_andContext(new LogicalAndExpressionContext(_parentctx, _parentState));
                                pushNewRecursionContext(_localctx, _startState, RULE_logicalAndExpression);
                                setState(171);
                                if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
                                setState(172);
                                match(AndAnd);
                                setState(173);
                                bitwiseOrExpression(0);
                            }
                        }
                    }
                    setState(178);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 11, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }

    public final BitwiseOrExpressionContext bitwiseOrExpression() throws RecognitionException {
        return bitwiseOrExpression(0);
    }

    private BitwiseOrExpressionContext bitwiseOrExpression(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        BitwiseOrExpressionContext _localctx = new BitwiseOrExpressionContext(_ctx, _parentState);
        BitwiseOrExpressionContext _prevctx = _localctx;
        int _startState = 26;
        enterRecursionRule(_localctx, 26, RULE_bitwiseOrExpression, _p);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                {
                    _localctx = new BitwiseOr_bitwiseXorContext(_localctx);
                    _ctx = _localctx;
                    _prevctx = _localctx;

                    setState(180);
                    bitwiseXorExpression(0);
                }
                _ctx.stop = _input.LT(-1);
                setState(187);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 12, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        if (_parseListeners != null) triggerExitRuleEvent();
                        _prevctx = _localctx;
                        {
                            {
                                _localctx = new BitwiseOr_orContext(new BitwiseOrExpressionContext(_parentctx, _parentState));
                                pushNewRecursionContext(_localctx, _startState, RULE_bitwiseOrExpression);
                                setState(182);
                                if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
                                setState(183);
                                match(Or);
                                setState(184);
                                bitwiseXorExpression(0);
                            }
                        }
                    }
                    setState(189);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 12, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }

    public final BitwiseXorExpressionContext bitwiseXorExpression() throws RecognitionException {
        return bitwiseXorExpression(0);
    }

    private BitwiseXorExpressionContext bitwiseXorExpression(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        BitwiseXorExpressionContext _localctx = new BitwiseXorExpressionContext(_ctx, _parentState);
        BitwiseXorExpressionContext _prevctx = _localctx;
        int _startState = 28;
        enterRecursionRule(_localctx, 28, RULE_bitwiseXorExpression, _p);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                {
                    _localctx = new BitwiseXor_bitwiseAndContext(_localctx);
                    _ctx = _localctx;
                    _prevctx = _localctx;
